Made the navigation bar static. Did som styling with active links, navigation menu, and added horizontal scrolling to pages with image content.

--- a/comics.html
+++ b/comics.html
@@ -5,35 +5,24 @@
       <title>wesley klein</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Collection of comics made by Wesley Klein.">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="static-sidebar.css">
+      <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Arimo|Dawning+of+a+New+Day|Lora|Ramaraja|Song+Myung" rel="stylesheet">
     </head>
 
     <body>
-      <header>
-        <h1>wesley klein</h1>
-      </header>
-      
       <main>
-        <section class="left">
-          <nav>
-            <ul>
-              <li><a href="index.html">home</a></li>
-              <li><a class="active" href="comics.html">comics</a></li>
-              <li><a href="illustrations.html">illustrations</a></li>
-              <li><a href="photo.html">photo</a></li>
-              <li><a href="blog.html">blog</a></li>
-              <li><a href="about-me.html">me</a></li>
-            </ul>
-          </nav>
-        </section>
+        <div class="sidenav" id="menublock">
+          <a href="index.html" class="homepage-title">wesley klein</a>
+          <a class="active link-title" href="comics.html">comics</a>
+          <a class="sub-title" href="cyclux.html">cyclux</a>
+          <a href="illustrations.html" class="link-title">illustrations</a>
+          <a href="photo.html" class="link-title">photo</a>
+          <a href="blog.html" class="link-title">blog</a>
+          <a href="about-me.html" class="link-title">me</a>
+        </div>
         
         <section class="right">
-          <img src="images/spread-1/spread-1.jpg" alt="First spread" class="responsive">
-          <img src="images/spread-2/spread-2.jpg" alt="First spread" class="responsive">
-          <img src="images/spread-3/spread-3.jpg" alt="First spread" class="responsive">
-          <img src="images/spread-4/spread-4.jpg" alt="First spread" class="responsive">
-          <img src="images/spread-5/spread-5.jpg" alt="First spread" class="responsive">
-          <img src="images/spread-6/spread-6.jpg" alt="First spread" class="responsive">
+          <p>Under construction.</p>
         </section>
       </main>
     </body>
