--- a/blog.html
+++ b/blog.html
@@ -5,27 +5,21 @@
       <title>wesley klein</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Blog of Wesley Klein">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="static-sidebar.css">
+      <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Arimo|Dawning+of+a+New+Day|Lora|Ramaraja|Song+Myung" rel="stylesheet">
     </head>
 
     <body>
-      <header>
-        <h1>wesley klein</h1>
-      </header>
-      
       <main>
-        <section class="left">
-          <nav>
-            <ul>
-              <li><a href="index.html">home</a></li>
-              <li><a href="comics.html">comics</a></li>
-              <li><a href="illustrations.html">illustrations</a></li>
-              <li><a href="photo.html">photo</a></li>
-              <li><a class="active" href="blog.html">blog</a></li>
-              <li><a href="about-me.html">me</a></li>
-            </ul>
-          </nav>
-        </section>
+        <div class="sidenav" id="menublock">
+          <a href="index.html" class="homepage-title">wesley klein</a>
+          <a href="comics.html" class="link-title">comics</a>
+          <a class="sub-title" href="cyclux.html">cyclux</a>
+          <a href="illustrations.html" class="link-title">illustrations</a>
+          <a href="photo.html" class="link-title">photo</a>
+          <a class="active link-title" href="blog.html">blog</a>
+          <a href="about-me.html" class="link-title">me</a>
+        </div>
         
         <section class="right">
           <p>Under construction.</p>
