--- a/index.html
+++ b/index.html
@@ -2,34 +2,28 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-      <title>wesley klein</title>
+    <title>wesley klein</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="The website of Wesley Klein. Here, his various projects, illustrations, comics, and photographs are hosted for your viewing pleasure.">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="style.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="static-sidebar.css">
+      <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Arimo|Dawning+of+a+New+Day|Lora|Ramaraja|Song+Myung" rel="stylesheet">
     </head>
 
     <body>
-      <header>
-        <h1>wesley klein</h1>
-      </header>
-      
       <main>
-        <section class="left">
-          <nav>
-            <ul>
-              <li><a class="active" href="index.html">home</a></li>
-              <li><a href="comics.html">comics</a></li>
-              <li><a href="illustrations.html">illustrations</a></li>
-              <li><a href="photo.html">photo</a></li>
-              <li><a href="blog.html">blog</a></li>
-              <li><a href="about-me.html">me</a></li>
-            </ul>
-          </nav>
-        </section>
+        <div class="sidenav" id="menublock">
+          <a class="active homepage-title" href="index.html">wesley klein</a>
+          <a href="comics.html" class="link-title">comics</a>
+          <a class="sub-title" href="cyclux.html">cyclux</a>
+          <a href="illustrations.html" class="link-title">illustrations</a>
+          <a href="photo.html" class="link-title">photo</a>
+          <a href="blog.html" class="link-title">blog</a>
+          <a href="about-me.html" class="link-title">me</a>
+        </div>
         
         <section class="right">
-          This site is under construction. As I learn more and have new ideas, I will update. Hopefully, it will be a full-fledged personal website soon.
+          <p>This site is under construction. As I learn more and have new ideas, I will update. Hopefully, it will be a full-fledged personal website soon.</p>
         </section> 
       </main>
     </body>
