Added viewport devicewidth meta property to head.

--- a/about-me.html
+++ b/about-me.html
@@ -7,6 +7,7 @@
       <meta name="desciption" content="Information regarding Wesley Klein. This includes a resume, likes, interests, hopes, and other stuff yet to be thought of.">
       <link rel="stylesheet" href="static-sidebar.css">
       <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Arimo|Dawning+of+a+New+Day|Lora|Ramaraja|Song+Myung" rel="stylesheet">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
