Added photographs and split into submenus.

--- a/cyclux.html
+++ b/cyclux.html
@@ -13,13 +13,17 @@
     <body>
       <main>
         <div class="sidenav" id="menublock">
-          <a href="index.html" class="homepage-title">wesley klein</a>
+          <a class="homepage-title" href="index.html">wesley klein</a>
           <a class="link-title" href="comics.html">comics</a>
           <a class="active sub-title" href="cyclux.html">cyclux</a>
-          <a href="illustrations.html" class="link-title">illustrations</a>
-          <a href="photo.html" class="link-title">photo</a>
-          <a href="blog.html" class="link-title">blog</a>
-          <a href="about-me.html" class="link-title">me</a>
+          <a class="link-title" href="illustrations.html">illustrations</a>
+          <a class="link-title" href="photo.html">photo</a>
+          <a class="sub-title" href="berkeley.html">berkeley</a>
+          <a class="sub-title" href="family.html">family</a>
+          <a class="sub-title" href="laguna.html">laguna</a>
+          <a class="sub-title" href="slit-scan.html">slit-scan</a>
+          <a class="link-title" href="blog.html">blog</a>
+          <a class="link-title" href="about-me.html">me</a>
         </div>
         
         <div id="carousel">
