--- a/illustrations.html
+++ b/illustrations.html
@@ -13,17 +13,28 @@
     <body>
       <main>
         <div class="sidenav" id="menublock">
-          <a href="index.html" class="homepage-title">wesley klein</a>
-          <a href="comics.html" class="link-title">comics</a>
+          <a class="homepage-title" href="index.html">wesley klein</a>
+          <a class="link-title" href="comics.html">comics</a>
           <a class="sub-title" href="cyclux.html">cyclux</a>
           <a class="active link-title" href="illustrations.html">illustrations</a>
-          <a href="photo.html" class="link-title">photo</a>
-          <a href="blog.html" class="link-title">blog</a>
-          <a href="about-me.html" class="link-title">me</a>
+          <a class="link-title" href="photo.html">photo</a>
+          <a class="sub-title" href="berkeley.html">berkeley</a>
+          <a class="sub-title" href="family.html">family</a>
+          <a class="sub-title" href="laguna.html">laguna</a>
+          <a class="sub-title" href="slit-scan.html">slit-scan</a>
+          <a class="link-title" href="blog.html">blog</a>
+          <a class="link-title" href="about-me.html">me</a>
         </div>
+        
         <div id="carousel">
           <div class="slide">
              <img src="images/self-portait/me-final-900h.jpg">
+          </div>
+          <div class="slide">
+             <img src="images/man-rock-900h.png">
+          </div>
+          <div class="slide">
+             <img src="images/woman-cursive-900h.png">
           </div>
         </div>
       </main>
