--- a/photo.html
+++ b/photo.html
@@ -13,18 +13,78 @@
     <body>
       <main>
         <div class="sidenav" id="menublock">
-          <a href="index.html" class="homepage-title">wesley klein</a>
-          <a href="comics.html" class="link-title">comics</a>
+          <a class="homepage-title" href="index.html">wesley klein</a>
+          <a class="link-title" href="comics.html">comics</a>
           <a class="sub-title" href="cyclux.html">cyclux</a>
-          <a href="illustrations.html" class="link-title">illustrations</a>
+          <a class="link-title" href="illustrations.html">illustrations</a>
           <a class="active link-title" href="photo.html">photo</a>
-          <a href="blog.html" class="link-title">blog</a>
-          <a href="about-me.html" class="link-title">me</a>
+          <a class="sub-title" href="berkeley.html">berkeley</a>
+          <a class="sub-title" href="family.html">family</a>
+          <a class="sub-title" href="laguna.html">laguna</a>
+          <a class="sub-title" href="slit-scan.html">slit-scan</a>
+          <a class="link-title" href="blog.html">blog</a>
+          <a class="link-title" href="about-me.html">me</a>
         </div>
         
-        <section class="right">
-          <p>Under construction.</p>
-        </section>
+        <div id="carousel">
+          <div class="slide">
+             <img src="images/photographs/brittany-driving-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/brittany-looking-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/dad-grandpa-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/grandma-chandelier-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/grandma-laughing-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/grandma-looking-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/grandparents-window-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/grapevine-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/laguna-algea-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/laguna-ripples-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/laguna-rock-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/me-bathroom-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/megan-dad-1-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/megan-dad-2-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/playing-board-games-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/slit-scanning-1-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/slit-scanning-2-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/study-hall-800h.JPG">
+          </div>
+          <div class="slide">
+             <img src="images/photographs/zacharys-800h.JPG">
+          </div>
+        </div>
       </main>
     </body>
 </html>
