Added styling to the splash pages oof each section.

--- a/comics.html
+++ b/comics.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html class="comicspage" lang="en-US">
   <head>
     <meta charset="utf-8">
       <title>wesley klein</title>
@@ -26,8 +26,9 @@
           <a class="link-title" href="about-me.html">me</a>
         </div>
         
-        <section class="right">
-          <p>Under construction.</p>
+        <section class="comicspage right">
+          <p class="comicsfirst">You've reached my comics.</p>
+          <p class="comicssecond">Check out the comic <a href="cyclux.html">cyclux</a>. There is more to come.</p>
         </section>
       </main>
     </body>
