--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html class="indexpage" lang="en-US">
   <head>
     <meta charset="utf-8">
     <title>wesley klein</title>
@@ -26,8 +26,9 @@
           <a class="link-title" href="about-me.html">me</a>
         </div>
         
-        <section class="right">
-          <p>This site is under construction. As I learn more and have new ideas, I will update. Hopefully, it will be a full-fledged personal website soon.</p>
+        <section class="indexpage right">
+          <p class="indexfirst">Hello, welcome to my website.</p>
+          <p class="indexsecond">Here you'll find my <a href="comics.html">comics</a>, <a href="illustrations.html">illustrations</a>, <a href="photo.html">photos</a>, and a bunch of other stuff. Take a look around.</p>
         </section> 
       </main>
     </body>
