--- a/photo.html
+++ b/photo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html class="photopage" lang="en-US">
   <head>
     <meta charset="utf-8">
       <title>wesley klein</title>
@@ -26,65 +26,10 @@
           <a class="link-title" href="about-me.html">me</a>
         </div>
         
-        <div id="carousel">
-          <div class="slide">
-             <img src="images/photographs/brittany-driving-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/brittany-looking-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/dad-grandpa-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/grandma-chandelier-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/grandma-laughing-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/grandma-looking-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/grandparents-window-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/grapevine-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/laguna-algea-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/laguna-ripples-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/laguna-rock-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/me-bathroom-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/megan-dad-1-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/megan-dad-2-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/playing-board-games-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/slit-scanning-1-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/slit-scanning-2-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/study-hall-800h.JPG">
-          </div>
-          <div class="slide">
-             <img src="images/photographs/zacharys-800h.JPG">
-          </div>
-        </div>
+        <section class="photopage right">
+          <p class="photofirst">You've reached my photos.</p>
+          <p class="photosecond">They are of my <a href="family.html">family</a>, my <a href="berkeley.html">home</a>, my <a href="laguna.html">old home</a>, and <a href="slit-scan.html">me</a>.</p>
+        </section>
       </main>
     </body>
 </html>
