--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,14 @@
         </div>
         
         <section class="right">
-          <p>Under construction.</p>
+          <section class="blogcontent">
+            <div class="blogpost">
+              <h2>June 14, 2018</h2>
+              <p>My week log journey into website development is finally showing some results! This is a test post for figureing out how I want the blog to look.</p>
+              <p>To be honest, I am not sure if what I want to do is technically even a blog. Actually, I don't even really know if there is a strict definition of a blog. Anyways, I want this to be more like a journal to capture the progress of my projects. I think that it would be good for reflection and evaluation.</p>
+              <p>I would like this to be up and running as soon as possible so that I can document the progress of my website. </p>
+            </div>
+          </section>
         </section>
       </main>
     </body>
