Removed unused fonts from header and made font sizes on splash pages related to viewport width.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta name="desciption" content="The website of Wesley Klein. Here, his various projects, illustrations, comics, and photographs are hosted for your viewing pleasure.">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="static-sidebar.css">
-      <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Arimo|Dawning+of+a+New+Day|Lora|Ramaraja|Song+Myung" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet"> 
     </head>
 
     <body>
