--- a/family.html
+++ b/family.html
@@ -6,7 +6,7 @@
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Collection of photographs taken by Wesley Klein.">
       <link rel="stylesheet" href="static-sidebar.css">
-      <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Arimo|Dawning+of+a+New+Day|Lora|Ramaraja|Song+Myung" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet"> 
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
