Cleaned up files and fixed navigation menu so that overflow is hidden.

--- a/about-me.html
+++ b/about-me.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-      <title>wesley klein</title>
+      <title>wesley klein - me</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Information regarding Wesley Klein. This includes a resume, likes, interests, hopes, and other stuff yet to be thought of.">
       <link rel="stylesheet" href="static-sidebar.css">
