--- a/comics.html
+++ b/comics.html
@@ -2,7 +2,7 @@
 <html class="comicspage" lang="en-US">
   <head>
     <meta charset="utf-8">
-      <title>wesley klein</title>
+      <title>wesley klein - comics</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Collection of comics made by Wesley Klein.">
       <link rel="stylesheet" href="static-sidebar.css">
