--- a/illustrations.html
+++ b/illustrations.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-      <title>wesley klein</title>
+      <title>wesley klein - illustrations</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Collection of Wesley Klein's illustrations.">
       <link rel="stylesheet" href="static-sidebar.css">
