--- a/berkeley.html
+++ b/berkeley.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-      <title>wesley klein</title>
+      <title>wesley klein - berkeley</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Collection of photographs taken by Wesley Klein.">
       <link rel="stylesheet" href="static-sidebar.css">
@@ -17,7 +17,7 @@
           <a class="link-title" href="comics.html">comics</a>
           <a class="sub-title" href="cyclux.html">cyclux</a>
           <a class="link-title" href="illustrations.html">illustrations</a>
-          <a class="active link-title" href="photo.html">photo</a>
+          <a class="link-title" href="photo.html">photo</a>
           <a class="active sub-title" href="berkeley.html">berkeley</a>
           <a class="sub-title" href="family.html">family</a>
           <a class="sub-title" href="laguna.html">laguna</a>
