--- a/slit-scan.html
+++ b/slit-scan.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-      <title>wesley klein</title>
+      <title>wesley klein - slit-scan</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Collection of photographs taken by Wesley Klein.">
       <link rel="stylesheet" href="static-sidebar.css">
