Changed to vertical scrolling of images and assimilated photographs into one page. Also changed name of css file. Lastly, cleaned up things and removed unnecessary thing.

--- a/berkeley.html
+++ b/berkeley.html
@@ -28,22 +28,22 @@
         
         <div id="carousel">
           <div class="slide">
-             <img src="images/photographs/brittany-driving-800h.JPG">
+             <img class="responsive" src="images/photographs/brittany-driving-800h.JPG">
           </div>
           <div class="slide">
-             <img src="images/photographs/grapevine-800h.JPG">
+             <img class="responsive" src="images/photographs/grapevine-800h.JPG">
           </div>
           <div class="slide">
-             <img src="images/photographs/me-bathroom-800h.JPG">
+             <img class="responsive" src="images/photographs/me-bathroom-800h.JPG">
           </div>
           <div class="slide">
-             <img src="images/photographs/brittany-looking-800h.JPG">
+             <img class="responsive" src="images/photographs/brittany-looking-800h.JPG">
           </div>
           <div class="slide">
-             <img src="images/photographs/study-hall-800h.JPG">
+             <img class="responsive" src="images/photographs/study-hall-800h.JPG">
           </div>
           <div class="slide">
-             <img src="images/photographs/zacharys-800h.JPG">
+             <img class="responsive" src="images/photographs/zacharys-800h.JPG">
           </div>
         </div>
       </main>
