--- a/blog.html
+++ b/blog.html
@@ -5,37 +5,29 @@
       <title>wesley klein - blog</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Blog of Wesley Klein">
-      <link rel="stylesheet" href="static-sidebar.css">
+      <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet"> 
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
-      <main>
-        <div class="sidenav" id="menublock">
-          <a class="homepage-title" href="index.html">wesley klein</a>
-          <a class="link-title" href="comics.html">comics</a>
-          <a class="sub-title" href="cyclux.html">cyclux</a>
-          <a class="link-title" href="illustrations.html">illustrations</a>
-          <a class="link-title" href="photo.html">photo</a>
-          <a class="sub-title" href="berkeley.html">berkeley</a>
-          <a class="sub-title" href="family.html">family</a>
-          <a class="sub-title" href="laguna.html">laguna</a>
-          <a class="sub-title" href="slit-scan.html">slit-scan</a>
-          <a class="active link-title" href="blog.html">blog</a>
-          <a class="link-title" href="about-me.html">me</a>
-        </div>
+      <nav class="sidenav">
+        <a class="nav-title-level-0" href="index.html">wesley klein</a>
+        <a class="nav-title-level-1" href="comics.html">comics</a>
+        <a class="nav-title-level-2" href="cyclux.html">cyclux</a>
+        <a class="nav-title-level-1" href="illustrations.html">illustrations</a>
+        <a class="nav-title-level-1" href="photo.html">photo</a>
+        <a class="active nav-title-level-1" href="blog.html">blog</a>
+        <a class="nav-title-level-1" href="about-me.html">me</a>
+      </nav>
         
-        <section class="right">
-          <section class="blogcontent">
-            <div class="blogpost">
-              <h2>June 14, 2018</h2>
-              <p>My week log journey into website development is finally showing some results! This is a test post for figureing out how I want the blog to look.</p>
-              <p>To be honest, I am not sure if what I want to do is technically even a blog. Actually, I don't even really know if there is a strict definition of a blog. Anyways, I want this to be more like a journal to capture the progress of my projects. I think that it would be good for reflection and evaluation.</p>
-              <p>I would like this to be up and running as soon as possible so that I can document the progress of my website. </p>
-            </div>
-          </section>
-        </section>
+      <main class="content">
+        <div class="blogpost">
+          <h2>June 14, 2018</h2>
+          <p>My week log journey into website development is finally showing some results! This is a test post for figureing out how I want the blog to look.</p>
+          <p>To be honest, I am not sure if what I want to do is technically even a blog. Actually, I don't even really know if there is a strict definition of a blog. Anyways, I want this to be more like a journal to capture the progress of my projects. I think that it would be good for reflection and evaluation.</p>
+          <p>I would like this to be up and running as soon as possible so that I can document the progress of my website. </p>
+        </div>
       </main>
     </body>
 </html>
