--- a/cyclux.html
+++ b/cyclux.html
@@ -5,47 +5,29 @@
       <title>wesley klein - cyclux</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Collection of comics made by Wesley Klein.">
-      <link rel="stylesheet" href="static-sidebar.css">
+      <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet"> 
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
-      <main>
-        <div class="sidenav" id="menublock">
-          <a class="homepage-title" href="index.html">wesley klein</a>
-          <a class="link-title" href="comics.html">comics</a>
-          <a class="active sub-title" href="cyclux.html">cyclux</a>
-          <a class="link-title" href="illustrations.html">illustrations</a>
-          <a class="link-title" href="photo.html">photo</a>
-          <a class="sub-title" href="berkeley.html">berkeley</a>
-          <a class="sub-title" href="family.html">family</a>
-          <a class="sub-title" href="laguna.html">laguna</a>
-          <a class="sub-title" href="slit-scan.html">slit-scan</a>
-          <a class="link-title" href="blog.html">blog</a>
-          <a class="link-title" href="about-me.html">me</a>
-        </div>
-        
-        <div id="carousel">
-          <div class="slide">
-             <img src="images/spread-1/spread-1-1000.jpg">
-          </div>
-          <div class="slide">
-             <img src="images/spread-2/spread-2-1000.jpg">
-          </div>
-          <div class="slide">
-             <img src="images/spread-3/spread-3-1000.jpg">
-          </div>
-          <div class="slide">
-             <img src="images/spread-4/spread-4-1000.jpg">
-          </div>
-          <div class="slide">
-             <img src="images/spread-5/spread-5-1000.jpg">
-          </div>
-          <div class="slide">
-             <img src="images/spread-6/spread-6-1000.jpg">
-          </div>
-        </div>
+      <nav class="sidenav">
+        <a class="nav-title-level-0" href="index.html">wesley klein</a>
+        <a class="nav-title-level-1" href="comics.html">comics</a>
+        <a class="active nav-title-level-2" href="cyclux.html">cyclux</a>
+        <a class="nav-title-level-1" href="illustrations.html">illustrations</a>
+        <a class="nav-title-level-1" href="photo.html">photo</a>
+        <a class="nav-title-level-1" href="blog.html">blog</a>
+        <a class="nav-title-level-1" href="about-me.html">me</a>
+      </nav>
+
+      <main class="content">
+        <img class="responsive" src="images/spread-1/spread-1-1000.jpg">
+        <img class="responsive" src="images/spread-2/spread-2-1000.jpg">
+        <img class="responsive" src="images/spread-3/spread-3-1000.jpg">
+        <img class="responsive" src="images/spread-4/spread-4-1000.jpg">
+        <img class="responsive" src="images/spread-5/spread-5-1000.jpg">
+        <img class="responsive" src="images/spread-6/spread-6-1000.jpg">
       </main>
     </body>
 </html>
