--- a/photo.html
+++ b/photo.html
@@ -5,31 +5,37 @@
       <title>wesley klein - photo</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Collection of photographs taken by Wesley Klein.">
-      <link rel="stylesheet" href="static-sidebar.css">
+      <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet"> 
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
       <main>
-        <div class="sidenav" id="menublock">
-          <a class="homepage-title" href="index.html">wesley klein</a>
-          <a class="link-title" href="comics.html">comics</a>
-          <a class="sub-title" href="cyclux.html">cyclux</a>
-          <a class="link-title" href="illustrations.html">illustrations</a>
-          <a class="active link-title" href="photo.html">photo</a>
-          <a class="sub-title" href="berkeley.html">berkeley</a>
-          <a class="sub-title" href="family.html">family</a>
-          <a class="sub-title" href="laguna.html">laguna</a>
-          <a class="sub-title" href="slit-scan.html">slit-scan</a>
-          <a class="link-title" href="blog.html">blog</a>
-          <a class="link-title" href="about-me.html">me</a>
-        </div>
+        <nav class="sidenav">
+          <a class="nav-title-level-0" href="index.html">wesley klein</a>
+          <a class="nav-title-level-1" href="comics.html">comics</a>
+          <a class="nav-title-level-2" href="cyclux.html">cyclux</a>
+          <a class="nav-title-level-1" href="illustrations.html">illustrations</a>
+          <a class="active nav-title-level-1" href="photo.html">photo</a>
+          <a class="nav-title-level-1" href="blog.html">blog</a>
+          <a class="nav-title-level-1" href="about-me.html">me</a>
+        </nav>
         
-        <section class="photopage right">
-          <p class="photofirst">You've reached my photos.</p>
-          <p class="photosecond">They are of my <a href="family.html">family</a>, my <a href="berkeley.html">home</a>, my <a href="laguna.html">old home</a>, and <a href="slit-scan.html">me</a>.</p>
-        </section>
+        <main class="content">
+          <img class="responsive" src="images/photographs/tinypng/brittany-driving-1000h.JPG">
+          <img class="responsive" src="images/photographs/tinypng/grapevine-1000h.JPG">
+          <img class="responsive" src="images/photographs/tinypng/me-bathroom-1000h.JPG">
+          <img class="responsive" src="images/photographs/tinypng/dad-grandpa-1000h.JPG">
+          <img class="responsive" src="images/photographs/tinypng/grandparents-window-1000h.JPG">
+          <img class="responsive" src="images/photographs/tinypng/grandma-chandelier-1000h.JPG">
+          <img class="responsive" src="images/photographs/tinypng/megan-dad-2-1000h.JPG">
+          <img class="responsive" src="images/photographs/tinypng/slit-scanning-1-1000h.JPG">
+          <img class="responsive" src="images/photographs/tinypng/slit-scanning-2-1000h.JPG">
+          <img class="responsive" src="images/photographs/tinypng/laguna-ripples-1000h.JPG">
+          <img class="responsive" src="images/photographs/tinypng/laguna-algea-1000h.JPG">
+          <img class="responsive" src="images/photographs/tinypng/laguna-rock-1000h.JPG">
+        </main>
       </main>
     </body>
 </html>
