--- a/comics.html
+++ b/comics.html
@@ -5,31 +5,24 @@
       <title>wesley klein - comics</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Collection of comics made by Wesley Klein.">
-      <link rel="stylesheet" href="static-sidebar.css">
+      <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet"> 
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
-      <main>
-        <div class="sidenav" id="menublock">
-          <a class="homepage-title" href="index.html">wesley klein</a>
-          <a class="active link-title" href="comics.html">comics</a>
-          <a class="sub-title" href="cyclux.html">cyclux</a>
-          <a class="link-title" href="illustrations.html">illustrations</a>
-          <a class="link-title" href="photo.html">photo</a>
-          <a class="sub-title" href="berkeley.html">berkeley</a>
-          <a class="sub-title" href="family.html">family</a>
-          <a class="sub-title" href="laguna.html">laguna</a>
-          <a class="sub-title" href="slit-scan.html">slit-scan</a>
-          <a class="link-title" href="blog.html">blog</a>
-          <a class="link-title" href="about-me.html">me</a>
-        </div>
+      <nav class="sidenav">
+        <a class="nav-title-level-0" href="index.html">wesley klein</a>
+        <a class="active nav-title-level-1" href="comics.html">comics</a>
+        <a class="nav-title-level-2" href="cyclux.html">cyclux</a>
+        <a class="nav-title-level-1" href="illustrations.html">illustrations</a>
+        <a class="nav-title-level-1" href="photo.html">photo</a>
+        <a class="nav-title-level-1" href="blog.html">blog</a>
+        <a class="nav-title-level-1" href="about-me.html">me</a>
+      </nav>
+      
+      <main class="content">
         
-        <section class="comicspage right">
-          <p class="comicsfirst">You've reached my comics.</p>
-          <p class="comicssecond">Check out the comic <a href="cyclux.html">cyclux</a>. There is more to come.</p>
-        </section>
       </main>
     </body>
 </html>
