--- a/index.html
+++ b/index.html
@@ -6,30 +6,23 @@
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="The website of Wesley Klein. Here, his various projects, illustrations, comics, and photographs are hosted for your viewing pleasure.">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="static-sidebar.css">
+      <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet"> 
     </head>
 
     <body>
-      <main>
-        <div class="sidenav" id="menublock">
-          <a class="active homepage-title" href="index.html">wesley klein</a>
-          <a class="link-title" href="comics.html">comics</a>
-          <a class="sub-title" href="cyclux.html">cyclux</a>
-          <a class="link-title" href="illustrations.html">illustrations</a>
-          <a class="link-title" href="photo.html">photo</a>
-          <a class="sub-title" href="berkeley.html">berkeley</a>
-          <a class="sub-title" href="family.html">family</a>
-          <a class="sub-title" href="laguna.html">laguna</a>
-          <a class="sub-title" href="slit-scan.html">slit-scan</a>
-          <a class="link-title" href="blog.html">blog</a>
-          <a class="link-title" href="about-me.html">me</a>
-        </div>
+      <nav class="sidenav">
+        <a class="active nav-title-level-0" href="index.html">wesley klein</a>
+        <a class="nav-title-level-1" href="comics.html">comics</a>
+        <a class="nav-title-level-2" href="cyclux.html">cyclux</a>
+        <a class="nav-title-level-1" href="illustrations.html">illustrations</a>
+        <a class="nav-title-level-1" href="photo.html">photo</a>
+        <a class="nav-title-level-1" href="blog.html">blog</a>
+        <a class="nav-title-level-1" href="about-me.html">me</a>
+      </nav>
+
+      <main class="content">
         
-        <section class="indexpage right">
-          <p class="indexfirst">Hello, welcome to my website.</p>
-          <p class="indexsecond">Here you'll find my <a href="comics.html">comics</a>, <a href="illustrations.html">illustrations</a>, <a href="photo.html">photos</a>, and a bunch of other stuff. Take a look around.</p>
-        </section> 
       </main>
     </body>
 </html>
