--- a/about-me.html
+++ b/about-me.html
@@ -6,23 +6,27 @@
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Information regarding Wesley Klein. This includes a resume, likes, interests, hopes, and other stuff yet to be thought of.">
       <link rel="stylesheet" href="style.css">
-      <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet"> 
+      <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
       <nav class="sidenav">
-        <a class="nav-title-level-0" href="index.html">wesley klein</a>
-        <a class="nav-title-level-1" href="comics.html">comics</a>
-        <a class="nav-title-level-2" href="cyclux.html">cyclux</a>
-        <a class="nav-title-level-1" href="illustrations.html">illustrations</a>
-        <a class="nav-title-level-1" href="photo.html">photo</a>
-        <a class="nav-title-level-1" href="blog.html">blog</a>
-        <a class="active nav-title-level-1" href="about-me.html">me</a>
+        <div class="nav-title-container">
+          <a href="index.html"><img id="title-image" src="images/my-eyes-name.png"></a>
+        </div>
+        <button class="dropdown-btn nav-option">comics</button>
+        <div class="dropdown-container">
+          <a class="nav-option" href="cyclux.html">cyclux</a>
+        </div>
+        <a class="nav-option" href="illustrations.html">illustrations</a>
+        <a class="nav-option" href="photo.html">photo</a>
+        <a class="nav-option" href="blog.html">blog</a>
+        <a class="nav-option" href="about-me.html">me</a>
       </nav>
         
       <main class="content">
-        <pre>I am currently a student at University of California, Berkeley studying mathematics and computer science. 
+        <pre style="padding-left: 50px;">I am currently a student at University of California, Berkeley studying mathematics and computer science. 
 
         Apart from my studies, I make comics and illustrations. 
 
@@ -75,5 +79,6 @@
 
         If you like any of those things too, we should talk!</pre>
       </main>
+      <script src="dropdown.js"></script>
     </body>
 </html>
