--- a/photo.html
+++ b/photo.html
@@ -6,36 +6,39 @@
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Collection of photographs taken by Wesley Klein.">
       <link rel="stylesheet" href="style.css">
-      <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet"> 
+      <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet"> 
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
-      <main>
-        <nav class="sidenav">
-          <a class="nav-title-level-0" href="index.html">wesley klein</a>
-          <a class="nav-title-level-1" href="comics.html">comics</a>
-          <a class="nav-title-level-2" href="cyclux.html">cyclux</a>
-          <a class="nav-title-level-1" href="illustrations.html">illustrations</a>
-          <a class="active nav-title-level-1" href="photo.html">photo</a>
-          <a class="nav-title-level-1" href="blog.html">blog</a>
-          <a class="nav-title-level-1" href="about-me.html">me</a>
-        </nav>
-        
-        <main class="content">
-          <img class="responsive" src="images/photographs/tinypng/brittany-driving-1000h.JPG">
-          <img class="responsive" src="images/photographs/tinypng/grapevine-1000h.JPG">
-          <img class="responsive" src="images/photographs/tinypng/me-bathroom-1000h.JPG">
-          <img class="responsive" src="images/photographs/tinypng/dad-grandpa-1000h.JPG">
-          <img class="responsive" src="images/photographs/tinypng/grandparents-window-1000h.JPG">
-          <img class="responsive" src="images/photographs/tinypng/grandma-chandelier-1000h.JPG">
-          <img class="responsive" src="images/photographs/tinypng/megan-dad-2-1000h.JPG">
-          <img class="responsive" src="images/photographs/tinypng/slit-scanning-1-1000h.JPG">
-          <img class="responsive" src="images/photographs/tinypng/slit-scanning-2-1000h.JPG">
-          <img class="responsive" src="images/photographs/tinypng/laguna-ripples-1000h.JPG">
-          <img class="responsive" src="images/photographs/tinypng/laguna-algea-1000h.JPG">
-          <img class="responsive" src="images/photographs/tinypng/laguna-rock-1000h.JPG">
-        </main>
+      <nav class="sidenav">
+        <div class="nav-title-container">
+          <a href="index.html"><img id="title-image" src="images/my-eyes-name.png"></a>
+        </div>
+        <button class="dropdown-btn nav-option">comics</button>
+        <div class="dropdown-container">
+          <a class="nav-option" href="cyclux.html">cyclux</a>
+        </div>
+        <a class="nav-option" href="illustrations.html">illustrations</a>
+        <a class="nav-option" href="photo.html">photo</a>
+        <a class="nav-option" href="blog.html">blog</a>
+        <a class="nav-option" href="about-me.html">me</a>
+      </nav>
+
+      <main class="content">
+        <img class="responsive" src="images/photographs/tinypng/brittany-driving-1000h.JPG">
+        <img class="responsive" src="images/photographs/tinypng/grapevine-1000h.JPG">
+        <img class="responsive" src="images/photographs/tinypng/me-bathroom-1000h.JPG">
+        <img class="responsive" src="images/photographs/tinypng/dad-grandpa-1000h.JPG">
+        <img class="responsive" src="images/photographs/tinypng/grandparents-window-1000h.JPG">
+        <img class="responsive" src="images/photographs/tinypng/grandma-chandelier-1000h.JPG">
+        <img class="responsive" src="images/photographs/tinypng/megan-dad-2-1000h.JPG">
+        <img class="responsive" src="images/photographs/tinypng/slit-scanning-1-1000h.JPG">
+        <img class="responsive" src="images/photographs/tinypng/slit-scanning-2-1000h.JPG">
+        <img class="responsive" src="images/photographs/tinypng/laguna-ripples-1000h.JPG">
+        <img class="responsive" src="images/photographs/tinypng/laguna-algea-1000h.JPG">
+        <img class="responsive" src="images/photographs/tinypng/laguna-rock-1000h.JPG">
       </main>
+      <script src="dropdown.js"></script>
     </body>
 </html>
