Did quick fix for keeping submenu open on reload when child of category.

--- a/cyclux.html
+++ b/cyclux.html
@@ -17,7 +17,7 @@
         </div>
         <div class="nav-main-container">
           <button class="dropdown-btn nav-option">comics</button>
-          <div class="dropdown-container">
+          <div class="dropdown-container clicked">
             <a class="nav-option" href="cyclux.html">cyclux</a>
           </div>
           <a class="nav-option" href="illustrations.html">illustrations</a>
