Added an icon for linking to instagram.

--- a/about-me.html
+++ b/about-me.html
@@ -23,16 +23,16 @@
           <a class="nav-option" href="illustrations.html">illustrations</a>
           <a class="nav-option" href="photo.html">photo</a>
           <a class="nav-option" href="blog.html">blog</a>
-          <a class="nav-option" href="about-me.html">me</a>
+          <a class="nav-option" href="about-me.html">about</a>
+        </div>
+        
+        <div class="icon-bar">
+          <a class="nav-option" href="https://www.instagram.com/chachoblow"><img src="images/instagram-icon-160.png" width="20"></a>
         </div>
       </nav>
       
       <main class="content">
-        <p>I am currently a student at University of California, Berkeley studying mathematics and computer science. 
-
-        Apart from my studies, I make comics and illustrations. 
-
-        Also, I am interested in a bunch of other stuff like virtual reality, design, videogames,dogs, The Office, tacos,swimming, House of Cards, the ocean, snow, airplanes, model building, light fixtures, reading, magazines, reading magazines, meditation, running, gliders, kites, forests, There Will Be Blood, cyberpunk, sneakers, hats, green J. Crew 770 chinos, go, Blade Runner, collage, cherries, kiwis, cats, beards, ice cream, woodworking, electronics, robots, movie theaters, board games, mechanical keyboards, coffee, those metal take-apart puzzles, hiking, The Revenant, danish modern furniture, de Kooning, art museums, Jean-Michel Basquiat, Egon Schiele, photography, maps, automotive racing, formula 1, turkey sandwhiches, rain, and some other stuff. If you like any of those things too, we should talk!</p>
+        <p>Coming soon.</p>
       </main>
       <script src="dropdown.js"></script>
     </body>
