--- a/blog.html
+++ b/blog.html
@@ -23,16 +23,18 @@
           <a class="nav-option" href="illustrations.html">illustrations</a>
           <a class="nav-option" href="photo.html">photo</a>
           <a class="nav-option" href="blog.html">blog</a>
-          <a class="nav-option" href="about-me.html">me</a>
+          <a class="nav-option" href="about-me.html">about</a>
+        </div>
+        
+        <div class="icon-bar">
+          <a class="nav-option" href="https://www.instagram.com/chachoblow"><img src="images/instagram-icon-160.png" width="20"></a>
         </div>
       </nav>
         
       <main class="content">
         <div class="blogpost">
-          <h2>June 14, 2018</h2>
-          <p>My week log journey into website development is finally showing some results! This is a test post for figureing out how I want the blog to look.</p>
-          <p>To be honest, I am not sure if what I want to do is technically even a blog. Actually, I don't even really know if there is a strict definition of a blog. Anyways, I want this to be more like a journal to capture the progress of my projects. I think that it would be good for reflection and evaluation.</p>
-          <p>I would like this to be up and running as soon as possible so that I can document the progress of my website. </p>
+          <h2>Under construction</h2>
+          <p>Posts coming soon. </p>
         </div>
       </main>
       <script src="dropdown.js"></script>
