--- a/illustrations.html
+++ b/illustrations.html
@@ -32,6 +32,7 @@
       </nav>
       
       <main class="content">
+        <img class="responsive" src="images/illustrations/bat-person-1080h.png">
         <img class="responsive" src="images/illustrations/man-rock-900h.png">
         <img class="responsive" src="images/illustrations/woman-cursive-900h.png">
         <img class="responsive" src="images/illustrations/me-final-1080h.jpg">
