Adding branches illustrations and nav.

--- a/branches.html
+++ b/branches.html
@@ -32,12 +32,13 @@
       </nav>
 
       <main class="content">
-        <img class="responsive" src="images/comics/cyclux/spread-1-1000.jpg">
-        <img class="responsive" src="images/comics/cyclux/spread-2-1000.jpg">
-        <img class="responsive" src="images/comics/cyclux/spread-3-1000.jpg">
-        <img class="responsive" src="images/comics/cyclux/spread-4-1000.jpg">
-        <img class="responsive" src="images/comics/cyclux/spread-5-1000.jpg">
-        <img class="responsive" src="images/comics/cyclux/spread-6-1000.jpg">
+        <img class="responsive" src="images/comics/branches/branches-page01.png">
+        <img class="responsive" src="images/comics/branches/branches-page02.png">
+        <img class="responsive" src="images/comics/branches/branches-page03.png">
+        <img class="responsive" src="images/comics/branches/branches-page04.png">
+        <img class="responsive" src="images/comics/branches/branches-page05.png">
+        <img class="responsive" src="images/comics/branches/branches-page06.png">
+        <img class="responsive" src="images/comics/branches/branches-page07.png">
       </main>
       <script src="dropdown.js"></script>
     </body>
