--- a/about-me.html
+++ b/about-me.html
@@ -19,6 +19,7 @@
           <button class="dropdown-btn nav-option">comics</button>
           <div class="dropdown-container">
             <a class="nav-option" href="cyclux.html">cyclux</a>
+            <a class="nav-option" href="branches.html">branches</a>
           </div>
           <a class="nav-option" href="illustrations.html">illustrations</a>
           <a class="nav-option" href="photo.html">photo</a>
