Adding branches illustrations and nav.

--- a/branches.html
+++ b/branches.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-      <title>wesley klein - cyclux</title>
+      <title>wesley klein - branches</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Collection of comics made by Wesley Klein.">
       <link rel="stylesheet" href="style.css">
