Adding branches illustrations and nav.

--- a/about-me.html
+++ b/about-me.html
@@ -32,7 +32,7 @@
       </nav>
 
       <main class="content">
-        <p>Coming soon.</p>
+        <p>I am currently finishing my last semester at The University of California, Berekeley where I majored in mathematics and minored in computer science. While I originally had hopes of continuing mathematics in graduate school, I now am excited to pursue oppurtunities that better fullfil my love for building and making things.</p>
       </main>
       <script src="dropdown.js"></script>
     </body>
