--- a/about-me.html
+++ b/about-me.html
@@ -34,6 +34,7 @@
       <main class="content">
         <p>I am currently finishing my last semester at The University of California, Berkeley where I majored in mathematics and minored in computer science. While I originally had hopes of continuing mathematics in graduate school, I am now excited to pursue oppurtunities in software engineering which better fullfil my love for building and making things.</p>
       </main>
+      <iframe src="https://editor.p5js.org/chachoblow/embed/H1Cb47__Q"></iframe>
       <script src="dropdown.js"></script>
     </body>
 </html>
